# ComfyUI-MusicGen-HF

./: .gitignore  README.md  __init__.py  check_model_paths.py  node_list.json  nodes.py  pyproject.toml  requirements.txt  test_bfloat16_issue.json  workflow_live_looping.json
nodes/: __init__.py  advanced_loop_nodes.py  bpm_nodes.py  conditioning_queue_nodes.py  io_nodes.py  musicgen_node.py  preview_nodes.py
utils/: audio_utils.py
